--- a/Em Grupo/Trabalho Intermediário/AnáliseDeDados.ipynb
+++ b/Em Grupo/Trabalho Intermediário/AnáliseDeDados.ipynb
@@ -14,468 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 161,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Ano de Ingresso</th>\n",
-       "      <th>Joga Algo</th>\n",
-       "      <th>Joga LoL</th>\n",
-       "      <th>Nick</th>\n",
-       "      <th>CR</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>60.60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>53.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>43.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2014</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>42.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2014</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>68.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>72.30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2013</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>50.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>70.20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2013</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>43.10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>evh</td>\n",
-       "      <td>45.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>sudo rm name</td>\n",
-       "      <td>82.20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>samdrix</td>\n",
-       "      <td>67.90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>fesder</td>\n",
-       "      <td>75.60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>00strouker00</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>fire of balerion</td>\n",
-       "      <td>43.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>zodiac spear</td>\n",
-       "      <td>86.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>thedarkdescent</td>\n",
-       "      <td>68.70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>2014</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>the t0m</td>\n",
-       "      <td>57.90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>radswalker</td>\n",
-       "      <td>64.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>eike1v9</td>\n",
-       "      <td>57.20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>2014</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>70.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>55.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>77.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>72.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>70.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>54.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>68.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>55.90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>2013</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>51.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>68.20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>2013</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>85.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>64.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>65.60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>84.60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>55.10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>55.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>BlakAiron</td>\n",
-       "      <td>75.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>CalangoG Brabo</td>\n",
-       "      <td>69.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Lesslie</td>\n",
-       "      <td>56.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Depressive Lux</td>\n",
-       "      <td>33.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Malodex</td>\n",
-       "      <td>48.70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>51.30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>39.15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>46.60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>33.30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>75.80</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Ano de Ingresso  Joga Algo  Joga LoL              Nick     CR\n",
-       "0              2015          1         0               NaN  60.60\n",
-       "1              2015          1         0               NaN  53.00\n",
-       "2              2017          1         0               NaN  43.80\n",
-       "3              2014          1         0               NaN  42.00\n",
-       "4              2014          1         0               NaN  68.40\n",
-       "5              2016          1         0               NaN  72.30\n",
-       "6              2013          1         0               NaN  50.00\n",
-       "7              2015          1         0               NaN  70.20\n",
-       "8              2013          1         0               NaN  43.10\n",
-       "9              2016          1         1               evh  45.80\n",
-       "10             2016          1         1      sudo rm name  82.20\n",
-       "11             2016          1         1           samdrix  67.90\n",
-       "12             2016          1         1            fesder  75.60\n",
-       "13             2016          1         1      00strouker00    NaN\n",
-       "14             2016          1         1  fire of balerion  43.80\n",
-       "15             2015          1         1      zodiac spear  86.40\n",
-       "16             2015          1         1    thedarkdescent  68.70\n",
-       "17             2014          1         1           the t0m  57.90\n",
-       "18             2016          1         1        radswalker  64.50\n",
-       "19             2016          1         1           eike1v9  57.20\n",
-       "20             2014          0         0               NaN  70.80\n",
-       "21             2015          0         0               NaN  55.80\n",
-       "22             2016          0         0               NaN  77.00\n",
-       "23             2016          0         0               NaN  72.40\n",
-       "24             2016          0         0               NaN  70.80\n",
-       "25             2016          0         0               NaN  54.50\n",
-       "26             2017          1         0               NaN  68.00\n",
-       "27             2015          0         0               NaN  55.90\n",
-       "28             2013          1         0               NaN  51.50\n",
-       "29             2015          1         0               NaN  68.20\n",
-       "30             2013          0         0               NaN  85.00\n",
-       "31             2015          0         0               NaN  64.00\n",
-       "32             2015          0         0               NaN  65.60\n",
-       "33             2015          0         0               NaN  84.60\n",
-       "34             2016          1         0               NaN  55.10\n",
-       "35             2017          1         0               NaN  55.00\n",
-       "36             2018          1         1         BlakAiron  75.00\n",
-       "37             2018          1         1    CalangoG Brabo  69.50\n",
-       "38             2017          1         1           Lesslie  56.00\n",
-       "39             2018          1         1    Depressive Lux  33.80\n",
-       "40             2017          1         1           Malodex  48.70\n",
-       "41             2018          1         0               NaN  51.30\n",
-       "42             2018          1         0               NaN  39.15\n",
-       "43             2018          1         0               NaN  46.60\n",
-       "44             2018          0         0               NaN  33.30\n",
-       "45             2018          1         0               NaN  75.80"
-      ]
-     },
-     "execution_count": 155,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = pd.read_csv('dados.csv')\n",
-    "df"
+    "df = pd.read_csv('dados.csv')"
    ]
   },
   {
