Correção dos Dados

--- a/Em Grupo/Trabalho Intermediário/AnáliseDeDados.ipynb
+++ b/Em Grupo/Trabalho Intermediário/AnáliseDeDados.ipynb
@@ -23,102 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 162,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Ano de Ingresso</th>\n",
-       "      <th>Joga Algo</th>\n",
-       "      <th>Joga LoL</th>\n",
-       "      <th>Nick</th>\n",
-       "      <th>CR</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>60.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>53.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>43.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2014</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>42.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2014</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>68.4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Ano de Ingresso  Joga Algo  Joga LoL Nick    CR\n",
-       "0             2015       True     False  NaN  60.6\n",
-       "1             2015       True     False  NaN  53.0\n",
-       "2             2017       True     False  NaN  43.8\n",
-       "3             2014       True     False  NaN  42.0\n",
-       "4             2014       True     False  NaN  68.4"
-      ]
-     },
-     "execution_count": 156,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df['Ano de Ingresso'] = pandas.to_numeric(df['Ano de Ingresso'])\n",
     "df['CR'] = pandas.to_numeric(df['CR'])\n",
     "df['Joga Algo'] = df['Joga Algo']==1\n",
-    "df['Joga LoL'] = df['Joga LoL']==1\n",
-    "df.head(5)"
+    "df['Joga LoL'] = df['Joga LoL']==1"
    ]
   },
   {
