--- a/Em Grupo/Trabalho Intermediário/Biblioteca.ipynb
+++ b/Em Grupo/Trabalho Intermediário/Biblioteca.ipynb
@@ -17,8 +17,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from lxml import html\n",
@@ -31,12 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Configurações\n",
-    "API_KEY = 'RGAPI-d321b7b8-8359-4913-acfe-86455c269f7e'\n",
+    "API_KEY = 'RGAPI-0280835c-3c1c-4b42-9fa6-81f35a07924b'\n",
     "REGIAO = 'br1'\n",
     "URL_BASE = 'https://'+REGIAO+'.api.riotgames.com/'\n",
     "NICK_TESTE = 'TheDarkDescent'"
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,6 +202,13 @@
     "        self.MatchList = MatchList(self.Summoner)\n",
     "        self.Leagues = Leagues(self.Summoner)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -207,18 +216,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
   }
  },
  "nbformat": 4,
